--- a/swagger-ui/index.html
+++ b/swagger-ui/index.html
@@ -68,7 +68,8 @@
 <body>
 <div id='header'>
   <div class="swagger-ui-wrap">
-    <a id="logo" href="http://swagger.wordnik.com">swagger</a>
+    <a id="logo" href="http://swagger.wordnik.com"></a>
+	<a class="logo-font">Bricks</a>
 
     <form id='api_selector'>
       <div class='input icon-btn'>
